--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "scripts": {
       "lint": "eslint --ext .ts --ext .js .",
       "lint:fix": "eslint --ext .ts --ext .js . --fix",
-      "test": "yarn workspaces run test"
+      "test": "yarn workspaces run test",
+      "build": "yarn workspaces run build"
     },
     "repository": {
       "type": "git",
@@ -26,11 +27,18 @@
     },
     "typings": "index.d.ts",
     "author": "Frederic Charette <fredericcharette@gmail.com>",
-    "license": "Apache 2.0",
+    "license": "Apache-2.0",
     "bugs": {
       "url": "https://github.com/fed135/flanc/issues"
     },
     "homepage": "https://github.com/fed135/flanc#readme",
+    "dependencies": {
+      "@flanc/router-graphql": "file:packages/router/graphql",
+      "@flanc/router-html": "file:packages/router/html",
+      "@flanc/router-json": "file:packages/router/jsonapi",
+      "@flanc/router-sqs": "file:packages/router/sqs",
+      "flanc": "file:packages/flanc"
+    },
     "devDependencies": {
       "@types/express": "^4.17.2",
       "@types/jest": "^26.0.0",
