--- a/packages/router/html/package.json
+++ b/packages/router/html/package.json
@@ -2,6 +2,13 @@
     "name": "@flanc/router-html",
     "version": "0.0.1",
     "description": "The html router for the flanc apis",
+    "license": "Apache-2.0",
+    "keywords": [
+        "flanc",
+        "router",
+        "html",
+        "render"
+    ],
     "dependencies": {
         "config": "^3.3.0",
         "flanc": "^0.0.1"
@@ -10,8 +17,21 @@
         "typescript": "^4.2.4"
     },
     "scripts": {
-        "build": "tsc --project ../../tsconfig.json --outDir bin"
+        "build": "tsc",
+        "test": "echo 'TODO'; exit 0;" 
     },
     "main": "./bin/index",
-    "files": ["./bin"]
+    "files": ["./bin"],
+    "homepage": "https://github.com/fed135/flanc",
+  "contributors": [
+    "frederic charette <fredericcharette@gmail.com>"
+  ],
+  "bugs": {
+    "url": "https://github.com/fed135/flanc/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com/fed135/flanc.js.git",
+    "directory": "packages/router/html"
+  }
 }
