--- a/packages/router/html/package.json
+++ b/packages/router/html/package.json
@@ -17,7 +17,7 @@
         "typescript": "^4.2.4"
     },
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --outDir ./bin",
         "test": "echo 'TODO'; exit 0;" 
     },
     "main": "./bin/index",
