--- a/packages/router/html/package.json
+++ b/packages/router/html/package.json
@@ -1,37 +1,20 @@
 {
     "name": "@flanc/router-html",
     "version": "0.0.1",
+    "private": true,
     "description": "The html router for the flanc apis",
     "license": "Apache-2.0",
-    "keywords": [
-        "flanc",
-        "router",
-        "html",
-        "render"
-    ],
     "dependencies": {
         "config": "^3.3.0",
-        "flanc": "^0.0.1"
+        "flanc": "file:../../flanc"
     },
     "devDependencies": {
         "typescript": "^4.2.4"
     },
+    "typings": "./types.d.ts",
     "scripts": {
-        "build": "rm -rf ./bin && tsc --outDir ./bin src/*.ts ../../flanc/types.d.ts",
+        "build": "rm -rf ./bin && tsc --esModuleInterop true --skipLibCheck true --outDir ./bin src/*.ts ./types.d.ts ../../../node_modules/flanc/types.d.ts && cp ./publish-package.json ./bin/package.json && cp ./README.md ./bin/README.md && cp ./types.d.ts ./bin/types.d.ts",
         "test": "echo 'TODO'; exit 0;" 
     },
-    "main": "./bin/index",
-    "files": ["./bin"],
-    "homepage": "https://github.com/fed135/flanc",
-  "contributors": [
-    "frederic charette <fredericcharette@gmail.com>"
-  ],
-  "bugs": {
-    "url": "https://github.com/fed135/flanc/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "ssh://git@github.com/fed135/flanc.js.git",
-    "directory": "packages/router/html"
-  }
+    "main": "./bin/index"
 }
