--- a/packages/router/sqs/tsconfig.json
+++ b/packages/router/sqs/tsconfig.json
@@ -17,7 +17,7 @@
       "node_modules"
     ],
     "include": [
-      "index.d.ts",
+      "types.d.ts",
       "packages/**/*.ts",
       "test/**/*.ts"
     ]
