--- a/packages/router/jsonapi/package.json
+++ b/packages/router/jsonapi/package.json
@@ -19,7 +19,7 @@
     },
     "typings": "./types.d.ts",
     "scripts": {
-        "build": "rm -rf ./bin && tsc --esModuleInterop true  --skipLibCheck true --outDir ./bin src/*.ts ./types.d.ts ../../../node_modules/flanc/types.d.ts && cp ./publish-package.json ./bin/package.json && cp ./README.md ./bin/README.md && cp ./types.d.ts ./bin/types.d.ts",
+        "build": "rm -rf ./bin && tsc --esModuleInterop true  --skipLibCheck true --outDir ./bin ./types.d.ts ../../../node_modules/flanc/types.d.ts src/*.ts && cp ./publish-package.json ./bin/package.json && cp ./README.md ./bin/README.md && cp ./types.d.ts ./bin/types.d.ts",
         "test": "echo 'TODO'; exit 0;" 
     },
     "main": "./bin/index"
