--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
       "node": ">=14"
     },
     "scripts": {
+      "cleanup": "rm -rf /tmp/flanc && mkdir -p /tmp/flanc",
+      "create-app": "yarn cleanup && cd /tmp/flanc && $INIT_CWD/create-app.sh test -Y && yarn start",
       "lint": "eslint --ext .ts --ext .js .",
       "lint:fix": "eslint --ext .ts --ext .js . --fix",
       "test": "yarn workspaces run test",
