--- a/packages/flanc/package.json
+++ b/packages/flanc/package.json
@@ -32,7 +32,7 @@
     },
     "typings": "types.d.ts",
     "scripts": {
-        "build": "rm -rf ./bin && tsc --esModuleInterop true --outDir ./bin ./types.d.ts src/**/*.ts && cp ./package.json ./bin/package.json && cp ./README.md ./bin/README.md && cp ./types.d.ts ./bin/types.d.ts",
+        "build": "rm -rf ./bin && tsc && cp ./package.json ./bin/package.json && cp ./README.md ./bin/README.md && cp ./types.d.ts ./bin/types.d.ts",
         "test": "TEST_MODE=test jest ./test/*"
     },
     "main": "./server",
