--- a/packages/flanc/tsconfig.json
+++ b/packages/flanc/tsconfig.json
@@ -7,6 +7,8 @@
       "esModuleInterop": true,
       "module": "commonjs",
       "resolveJsonModule": true,
+      "skipLibCheck": true,
+      "skipDefaultLibCheck": true,
       "target": "ES2020",
       "types": [
         "jest",
