--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
       "node": ">=14"
     },
     "scripts": {
-      "cleanup": "rm -rf /tmp/flanc && mkdir -p /tmp/flanc",
-      "create-app": "yarn cleanup && cd /tmp/flanc && $INIT_CWD/create-app.sh test -Y && NODE_DEBUG=FLANC yarn start",
+      "cleanup": "rm -rf /tmp/flanc-app && mkdir -p /tmp/flanc-app",
+      "create-app": "yarn cleanup && cd /tmp/flanc-app && $INIT_CWD/create-app.sh test -Y && NODE_DEBUG=FLANC yarn start",
       "lint": "eslint --ext .ts --ext .js .",
       "lint:fix": "eslint --ext .ts --ext .js . --fix",
       "test": "yarn workspaces run test",
