--- a/project-template/package.json
+++ b/project-template/package.json
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/get<project_name>/<project_name>#readme",
   "dependencies": {
+    "@flanc/router-graphql": "^0.0.1",
     "@flanc/router-json": "^0.0.8",
     "config": "^3.3.0",
     "dotenv": "^9.0.0",
