--- a/project-template/packages/domain/sample/package.json
+++ b/project-template/packages/domain/sample/package.json
@@ -4,6 +4,7 @@
   "description": "Sample domain",
   "private": true,
   "dependencies": {
+     "@flanc/router-graphql": "^0.0.1",
       "@flanc/router-json": "^0.0.8"
   }
 }
