--- a/packages/router/graphql/package.json
+++ b/packages/router/graphql/package.json
@@ -9,7 +9,8 @@
         "config": "^3.3.0",
         "express": "^4.17.1",
         "flanc": "file:../../flanc",
-        "graphql": "^15.5.0"
+        "graphql": "^15.5.0",
+        "uuid-validate": "^0.0.3"
     },
     "devDependencies": {
         "typescript": "^4.2.4"
