--- a/packages/flanc/package.json
+++ b/packages/flanc/package.json
@@ -20,9 +20,7 @@
         "luxon": "^1.26.0",
         "stoppable": "^1.1.0",
         "swagger-route-validator": "^1.0.2",
-        "undici": "^4.8.1",
-        "uuid": "^8.3.0",
-        "uuid-validate": "^0.0.3"
+        "undici": "^4.8.1"
     },
     "devDependencies": {
         "jest": "^27.0.0",
