--- a/packages/flanc/package.json
+++ b/packages/flanc/package.json
@@ -13,10 +13,10 @@
     "dependencies": {
         "config": "^3.3.0",
         "express": "^4.17.1",
+        "fast-jwt": "^1.2.0",
         "ha-store": "^3.0.0",
         "i18next": "^20.2.0",
         "i18next-node-fs-backend": "^2.1.3",
-        "jsonwebtoken": "^8.5.1",
         "luxon": "^1.26.0",
         "stoppable": "^1.1.0",
         "swagger-route-validator": "^1.0.2",
